--- a/style.css
+++ b/style.css
@@ -429,6 +429,11 @@ p {
 .navbar-area.navbar-nine .navbar-brand {
   margin: 0;
 }
+
+.navbar-brand img {
+  border-radius: 50%;
+  box-shadow: 5px 5px 7px rgba(0, 0, 0, 0.3);
+}
 .navbar-area.navbar-nine .navbar {
   position: relative;
   padding: 0;
